# Micro_AI_coder

./: .gitignore  CODE_UPDATE_SUMMARY.md  CONTRIBUTING.md  CPU_TRAINING_GUIDE.md  DATA_QUALITY_REPORT.md  HUGGINGFACE_SETUP_GUIDE.md  IMPLEMENTATION_PLAN_FINETUNED_MODEL.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INFERENCE_ANALYSIS.md  INFERENCE_ERROR_HANDLING.md  LICENSE  PLAN.md  QUICK_START.md  README.md  UPDATE_PLAN.md  convert_dataset.py  convert_to_training.py  pyproject.toml  requirements.txt  run_cpu_pipeline.sh  run_hf_pipeline.sh  setup.py
.github/workflows/: python-tests.yml
datasets/: ai_training_data.jsonl  conversion_log.txt
finetuned_ai_model/: COLAB_QUICK_START.md  FINE_TUNING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md
finetuned_ai_model/colab_notebooks/: fine_tune_qwen_colab.ipynb
finetuned_ai_model/models/: Modelfile_qwen_reactjs
finetuned_ai_model/phase3_inference/: v3_inference_finetuned.py
finetuned_ai_model_qwen-1-5-b/: IMPLEMENTATION_PLAN.md  MEMORY_OPTIMIZATION.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUNPOD_QUICK_START.md  RUNPOD_SETUP_GUIDE.md  requirements.txt
models/: model_config.json  model_config_huggingface_cpu.json  model_config_huggingface_cpu_clean.json  model_config_llama_cpu.json  training_log (4).jsonl
phase1_dataset_creator/: __init__.py  extract_tutorials.py  merge_tutorials.py  v2_dataset_creator.py
phase2_training/: __init__.py  v2_train_model.py  v2_train_model_huggingface.py  v2_train_model_huggingface_cpu.py
phase3_inference/: __init__.py  v2_inference.py  v2_inference.py.backup
phase4_agent/: __init__.py  micro_ai_coder_agent.py  micro_ai_coder_agent_huggingface.py  micro_ai_coder_agent_huggingface_cpu.py
scripts/: analyze_hf_dataset.py  check_messages.py  clean_hf_dataset.py  compare_models.py  diagnose_hf_dataset.py
(+19 files in other folders)
