[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-ai-coder"
version = "0.1.0"
description = "A 4-phase system for training and deploying specialized AI code generators"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Micro AI Coder Team"}
]
keywords = [
    "ai",
    "code-generation",
    "pytorch",
    "transformer",
    "llm",
    "machine-learning"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.5.0",
    "tiktoken>=0.5.2",
    "requests>=2.32.3",
    "numpy>=1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
    "black>=23.0",
    "isort>=5.12",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/Micro_AI_coder"
Repository = "https://github.com/YOUR_USERNAME/Micro_AI_coder.git"
Issues = "https://github.com/YOUR_USERNAME/Micro_AI_coder/issues"
Documentation = "https://github.com/YOUR_USERNAME/Micro_AI_coder#readme"

[tool.setuptools]
packages = ["phase1_dataset_creator", "phase2_training", "phase3_inference", "phase4_agent"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
